docs: enhance topic documentation with PR analysis and best practices
Add comprehensive PR analysis (JDK-8341755, JDK-8349400, etc.) and performance
optimization sections to 9 core topic documents:

Core Platform:
- language/syntax: Enum and Lambda optimization PRs
- core/records: Performance comparison and best practices
- core/gc: Memory optimization and tuning guide
- core/classloading: Startup and Lambda optimization
- core/patterns: Pattern matching performance
- core/generics: Lambda + generics optimization

Language Features:
- language/lambda: Detailed invokedynamic and bytecode analysis
- language/streams: Spliterator, parallel flow, gatherers
- language/classfile: 9 PR analyses including BufWriter optimization

Also fix contributor profile links and add missing topic entries to index.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>